package common_dto;

option java_package = "com.vmturbo.platform.common.dto";
option java_outer_classname = "ActionExecution";

// These messages are used by the SDK only

import "CommonDTO.proto";

// This message holds values necessary for executing actions on Service Entity discovered with SDK probe
message ActionItemDTO {
    // ActionType of the action
    required ActionType actionType = 1;

    // ActionItem's uuid
    required string uuid = 2;

    // EntityDTO for the Target ServiceEntity on which the action should be applied
    required EntityDTO targetSE = 3;

    // EntityDTO for the service entity which hosts the targetSE
    optional EntityDTO hostedBySE = 4;

    // EntityDTO for the ServiceEntity by which the Target ServiceEntity is hosted now (for Move action only)
    optional EntityDTO currentSE = 5;

    // EntityDTO for the ServiceEntity by which the Target ServiceEntity will be hosted
    // after applied the action (for Move action only)
    optional EntityDTO newSE = 6;

    // CommodityDTO for the commodity on which the action
    // should be applied (current values)
    optional CommodityDTO currentComm = 7;

    // CommodityDTO for the commodity on which the action
    // should be applied (after the action is applied)
    optional CommodityDTO newComm = 8;

    // Action Execution Progress
    optional int64 progress = 9;

    // CommodityAttribute enum notifying type of changed attribute
    optional CommodityAttribute commodityAttribute = 10;

    // Information for providers of the targetSE.
    repeated ProviderInfo providers = 11;

    // This message holds provider information for the target SE of this ActionItem.
    message ProviderInfo {
        required EntityDTO.EntityType entityType = 1;
        repeated string ids = 2;
    }

    enum ActionType {
        NONE = 0;
        START = 1;
        MOVE = 2;
        SUSPEND = 3;
        TERMINATE = 4;
        SPAWN = 5;
        ADD_PROVIDER = 6;
        CHANGE = 7;
        REMOVE_PROVIDER = 8;
        PROVISION = 9;
        RECONFIGURE = 10;
        RESIZE = 11;
        RESIZE_CAPACITY = 12;
        WARN = 13;
        RECONFIGURE_THRESHOLD = 14;
        DELETE = 15;
        RIGHT_SIZE = 16;
        RESERVE_ON_PM = 17;
        RESERVE_ON_DS = 18;
        RESIZE_FOR_EFFICIENCY = 19;
        RESIZE_FOR_PERFORMANCE = 20;
    }

    enum CommodityAttribute {
        Capacity = 0;
        Limit = 1;
        Reservation = 2;
    }
}

enum ActionResponseState {
    PENDING_ACCEPT = 0;
    ACCEPTED = 1;
    REJECTED = 2;
    IN_PROGRESS = 3;
    SUCCEEDED = 4;
    FAILED = 5;
    RECOMMENDED = 6;
    DISABLED = 7;
    QUEUED = 8;
}
